[package]
name = "wasm"
version = "0.1.0"
authors = ["Stuart Lynn <stuart.lynn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
geo = "0.12.0"
geo-types = "0.4.0"
geojson = { version =  "0.16.0", features=["geo-types"] }
serde_json = "1.0.39"
rayon = "1.0.3"
serde = "^1.0.59"
serde_derive = "^1.0.59"
rstar="0.2.0"
serde-wasm-bindgen = "0.1.3"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Window",
  'Element',
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData"
]

[lib]
crate-type = ["cdylib"]


